--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="total" id="cart-total">Total: $0</div>
     <a id="whatsapp-link" class="whatsapp-btn" target="_blank">📲 Enviar pedido por WhatsApp</a>
 </div>
-
+<script type='text/javascript' src='//pl27450993.profitableratecpm.com/76/3f/es/763fde38ec4f11059ae4e0fffc108820.js'></script>
 <script src="script.js"></script>
 </body>
 </html>
