--- a/ropa.html
+++ b/ropa.html
@@ -49,5 +49,6 @@
 </div>
 
 <script src="script.js"></script>
+    <script type='text/javascript' src='//pl27450993.profitableratecpm.com/76/3f/es/763fde38ec4f11059ae4e0fffc108820.js'></script>
 </body>
 </html>
